@@ -232,7 +232,7 @@ public class PartialARGsCombiner implements Algorithm, StatisticsProvider {
               Lists.newArrayList(
                   Iterables.filter(component.getChildren(), edgeSuccessorIdentifier)));
           // check if stopped because no concrete successors exists, then do not
-          if (successorsForEdge.get(successorsForEdge.size() - 1).isEmpty()
+          if (successorsForEdge.getLast().isEmpty()
               && noConcreteSuccessorExist(component, succEdge, pForwaredReachedSet)) {
             continue nextEdge;
           }
@@ -436,7 +436,7 @@ public class PartialARGsCombiner implements Algorithm, StatisticsProvider {
     int[] indices = new int[pSuccessorsForEdge.size()];
     int nextIndex = 0;
     boolean restart;
-    int lastSize = pSuccessorsForEdge.get(pSuccessorsForEdge.size() - 1).size();
+    int lastSize = pSuccessorsForEdge.getLast().size();
 
     if (lastSize == 0) {
       lastSize = 1;
