@@ -123,7 +123,7 @@ class MemoryManipulationFunctionHandler {
     final List<CExpression> arguments = functionCall.getParameterExpressions();
     verify(arguments.size() == 3);
 
-    CExpression destination = arguments.get(0);
+    CExpression destination = arguments.getFirst();
     final CExpression secondArgument = arguments.get(1);
     final CExpression sizeInBytes = arguments.get(2);
 
@@ -449,9 +449,7 @@ class MemoryManipulationFunctionHandler {
       return new CCastExpression(
           FileLocation.DUMMY,
           new CPointerType(
-              argument.getExpressionType().isConst(),
-              argument.getExpressionType().isVolatile(),
-              CNumericTypes.UNSIGNED_CHAR),
+              argument.getExpressionType().getQualifiers(), CNumericTypes.UNSIGNED_CHAR),
           argument);
     }
 
@@ -529,8 +527,7 @@ class MemoryManipulationFunctionHandler {
       // fuse the last two dimensions together
       idType =
           new CArrayType(
-              lastDimensionType.isConst(),
-              lastDimensionType.isVolatile(),
+              lastDimensionType.getQualifiers(),
               secondLastDimensionType.getType(),
               multipliedLength);
     }
